--- a/templates/index.html
+++ b/templates/index.html
@@ -13,17 +13,8 @@
 		<h1>Our Products</h1>
 		<ul>
 			{% for resource in resources %}
-				{% if resource.ResPriceVal >= 5000 %}
-				<li>{{resource.ResName}}: <b>{{resource.ResPriceVal}} $</b></li>
-				{% endif %}
-			{% endfor %}
-		</ul>
-	</div>
-
-	<h1>Our Products (filtered in backend)</h1>
-		<ul>
-			{% for resource in filtered_resources %}
-				<li>{{resource.ResName}}: <b>{{resource.ResPriceVal}} $</b></li>
+				<li>{{resource.ResName}}: <b>{{resource.ResPriceVal}} $</b> 
+					<em>Category:</em><b>{{ resource.Category }}</b></li>
 			{% endfor %}
 		</ul>
 	</div>
