--- a/v0.2/main/templates/users.html
+++ b/v0.2/main/templates/users.html
@@ -46,7 +46,7 @@
 
 				<td>
 					<!-- <a href="/ulanyjylar/{{ user.id }}/delete"> -->
-					<a href="{{ url_for('delete_user', id=user.id) }}">
+					<a href="{{ url_for('users_bp.delete_user', id=user.id) }}">
 						Delete
 					</a>
 				</td>
