--- a/v0.2/main/templates/index.html
+++ b/v0.2/main/templates/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hello flask</title>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-	<!-- <link rel="stylesheet" href="/static/css/style.css"> -->
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block content %}
 
 	<h2>Rendered successfully</h2>
 	<p>{{ message }}</p>
@@ -37,6 +30,5 @@
 			{% endfor %}
 		</ul>
 	</div>
-	
-</body>
-</html>
+
+{% endblock %}
