--- a/v0.2/main/templates/products.html
+++ b/v0.2/main/templates/products.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Products</title>
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block content %}
+
 	<ul>
 		{% if not resources %}
 			<h1>404 - nothing found</h1>
@@ -20,5 +16,5 @@
 			</li>
 		{% endfor %}
 	</ul>
-</body>
-</html>
+
+{% endblock %}
