--- a/v0.2/main/templates/auth/login.html
+++ b/v0.2/main/templates/auth/login.html
@@ -1,38 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Login</title>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
-</head>
-<body>
-	<div class="container">
-		
-		{% with messages = get_flashed_messages(with_categories=true) %}
-		{% if messages %}
-			{% for category, message in messages %}
-			<div class="alert alert-{{ category }} alert-dismissible show fade" style="margin: auto; height: 10%; opacity: 1; width: 95%; overflow: auto; text-align: center;">
-				<div class="alert-body" style="padding-top: 5px;">
-					<button class="close" data-dismiss="alert">
-						<span>×</span>
-					</button>
-					{{ message }}
-				</div>
-			</div>
-			{% endfor %}
-		{% endif %}
-		{% endwith %}
+{% extends "layout.html" %}
 
-		<h1>Login to continue</h1>
-		<form action='' method="POST">
-			{{ form.csrf_token }}
-			{{ form.username(class="form-group", placeholder="username") }}
+{% block content %}
 
-			{{ form.password(class="form-group", placeholder="password") }}
-			<button class="btn btn-primary" type="submit">Login!</button>
-		</form>
-	</div>
-	
-</body>
-</html>
+	<h1>Login to continue</h1>
+	<form action='' method="POST">
+		{{ form.csrf_token }}
+		{{ form.username(class="form-group", placeholder="username") }}
+
+		{{ form.password(class="form-group", placeholder="password") }}
+		<button class="btn btn-primary" type="submit">Login!</button>
+	</form>
+
+{% endblock %}
