--- a/v0.2/main/templates/users.html
+++ b/v0.2/main/templates/users.html
@@ -1,28 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-	<title>Users</title>
-</head>
-<body>
-	Users table
-	
-	{% with messages = get_flashed_messages(with_categories=true) %}
-	{% if messages %}
-		{% for category, message in messages %}
-		<div class="alert alert-{{ category }} alert-dismissible show fade" style="margin: auto; height: 10%; opacity: 1; width: 95%; overflow: auto; text-align: center;">
-			<div class="alert-body" style="padding-top: 5px;">
-				<button class="close" data-dismiss="alert">
-					<span>×</span>
-				</button>
-				{{ message }}
-			</div>
-		</div>
-		{% endfor %}
-	{% endif %}
-	{% endwith %}
+{% extends "layout.html" %}
+
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+{% endblock %}
+
+{% block content %}
 
 	<table class="table-bordered th">
 		<thead>
@@ -66,5 +48,4 @@
 		</form>
 	</div>
 	
-</body>
-</html>
+{% endblock %}
