--- a/v0.1/templates/index.html
+++ b/v0.1/templates/index.html
@@ -15,6 +15,8 @@
 			{% for resource in resources %}
 				<li>{{resource.ResName}}: <b>{{resource.ResPriceVal}} $</b> 
 					<em>Category:</em><b>{{ resource.Category }}</b></li>
+				</b>
+				{{resource.Description}}
 			{% endfor %}
 		</ul>
 	</div>
